--- a/index.css
+++ b/index.css
@@ -55,7 +55,7 @@ header {
     }
 
     .banner {
-        background-image: url('./img/d.jpg');
+        background-image: url('d.jpg');
     }
 }
 @media screen and (max-width: 450px) {
@@ -134,7 +134,7 @@ a:hover {
 }
 .banner {
     margin-top: 100px;
-    background-image: url('./img/c.jpg');
+    background-image: url('c.jpg');
     height: 700px;
     background-repeat: no-repeat;
     display: flex;
